10-StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mlr-dev-db-sfs
  namespace: mlr-dev-db-ns
spec:
  serviceName: mlr-dev-db-svc-sfs
  replicas: 3
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mysql
        image: 192.168.56.200/mylittlerecipebook/mysql:1.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        lifecycle:
          postStart:
            exec:
              command:
                - "sh"
                - "-c"
                - >
                  if [ $(hostname -s) != "mlr-dev-db-sfs-0" ]; then
                    until mysql -h mlr-dev-db-sfs-0.mlr-dev-db-svc-sfs.mlr-dev-db-ns.svc.cluster.local -u root -p${MYSQL_ROOT_PASSWORD} -e "SHOW MASTER STATUS\G"; do sleep 10; done;
                    MASTER_LOG_FILE=$(mysql -h mlr-dev-db-sfs-0.mlr-dev-db-svc-sfs.mlr-dev-db-ns.svc.cluster.local -u root -p${MYSQL_ROOT_PASSWORD} -e "SHOW MASTER STATUS\G" | grep File: | awk '{print $2}');
                    MASTER_LOG_POS=$(mysql -h mlr-dev-db-sfs-0.mlr-dev-db-svc-sfs.mlr-dev-db-ns.svc.cluster.local -u root -p${MYSQL_ROOT_PASSWORD} -e "SHOW MASTER STATUS\G" | grep Position: | awk '{print $2}');
                    mysql -u root -p${MYSQL_ROOT_PASSWORD} -e "CHANGE MASTER TO MASTER_HOST='mlr-dev-db-sfs-0.mlr-dev-db-svc-sfs.mlr-dev-db-ns.svc.cluster.local', MASTER_USER='repl', MASTER_PASSWORD='${MYSQL_REPLICATION_PASSWORD}', MASTER_LOG_FILE='$MASTER_LOG_FILE', MASTER_LOG_POS=$MASTER_LOG_POS; START SLAVE;";
                  fi
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: openebs-hostpath
